Fixed some align bugs in about page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -439,6 +439,9 @@ img {
         margin: 15%;
       }
     }
+    .about-text {
+      margin: auto;
+    }
   }
 
   .philo-content {
@@ -455,6 +458,10 @@ img {
         margin: 1rem;
       }
     }
+  }
+
+  .about-text {
+    margin: auto;
   }
 }
 
